--- a/auth/package.json
+++ b/auth/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "cookie-session": "^2.1.1",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
