--- a/auth/package.json
+++ b/auth/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "tickets-validator": "^3.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
