--- a/tickets/package.json
+++ b/tickets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "tickets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -23,6 +23,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.0",
@@ -32,6 +34,8 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.13",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
