--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,11 +18,21 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
+          - path: '/api/orders/?(.*)'
+            backend:
+              serviceName: orders-srv
+              servicePort: 3000
           - path: /api/tickets/?(.*)
+            pathType: ImplementationSpecific
             backend:
-              serviceName: tickets-srv
-              servicePort: 3000
+              service:
+                name: tickets-srv
+                port:
+                  number: 3000
           - path: /?(.*)
+            pathType: ImplementationSpecific
             backend:
-              serviceName: client-srv
-              servicePort: 3000
+              service:
+                name: client-srv
+                port:
+                  number: 3000
