--- a/infra/k8s/nats-depl.yaml
+++ b/infra/k8s/nats-depl.yaml
@@ -10,25 +10,19 @@ spec:
   template:
     metadata:
       labels:
-        apps: nats
+        app: nats
     spec:
       containers:
         - name: nats
-          image: nats-streaming:0.17.0
+          image: nats/stan:0.17.0
           args: [
-            '-p',
-            '4222',
-            '-m',
-            '8222',
-            '-hbi',
-            '5s',
-            '-hbt',
-            '5s',
-            '-hbf',
-            '2',
-            '-SD',
-            '-cid',
-            'ticketing'
+            "-p", "4222",
+            "-m", "8222",
+            "-hbi", "5s",
+            "-hbt", "5s",
+            "-hbf", "2",
+            "-SD",
+            "-cid", "ticketing"
           ]
 ---
 apiVersion: v1
