--- a/infra/k8s/tickets-mongo-depl.yaml
+++ b/infra/k8s/tickets-mongo-depl.yaml
@@ -1,30 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tickets-mongo-depl
+  name: tickets-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tickets-mongo
+      app: tickets
   template:
     metadata:
       labels:
-        app: tickets-mongo
+        app: tickets
     spec:
       containers:
-        - name: tickets-mongo
-          image: mongo
+        - name: tickets
+          image: moham/tickets
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
+            - name: MONGO_URI
+              value: 'mongodb://tickets-mongo-srv:27017/tickets'
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tickets-mongo-srv
+  name: tickets-srv
 spec:
   selector:
-    app: tickets-mongo
+    app: tickets
   ports:
-    - name: db
+    - name: tickets
       protocol: TCP
-      port: 27017
-      targetPort: 27017
+      port: 3000
+      targetPort: 3000
